# backtestingfx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backtestingfx/: __init__.py  backtest.py  plotting.py
examples/: benchmark.py  compare_bt.py  html_report.py  simple_strategy.rs  sma_cross.py
python/: backtest.py  simple_strategy.py
src/: broker.rs  data.rs  engine.rs  lib.rs  stats.rs  strategy.rs  types.rs
tests/: test_backtest.py
